#9 Improve Header icon + btn start on Home page

--- a/assets/scss/bulma_override/bulma_colors.scss
+++ b/assets/scss/bulma_override/bulma_colors.scss
@@ -2,6 +2,8 @@
 
 // utilities : initial-variables
 $red: #d6001c;
+// utilities : derived-variables
+$link: #3678ff;
 
 // base : generic
 $body-background-color: $default-background-color;
