#19 Add Sitemap / Robot / Meta Description + fix minor html recommendation

--- a/assets/scss/bulma_override/bulma_colors.scss
+++ b/assets/scss/bulma_override/bulma_colors.scss
@@ -4,7 +4,7 @@
 // $red: #d6001c;
 
 // utilities : derived-variables
-$link: #2e334a;
+$link: $default-text-color;
 
 // base : generic
 $body-background-color: $default-background-color;
