#15 Fix font import error on console + css refacto

--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -1,3 +1,9 @@
+.home-grid {
+  position: absolute;
+}
+.canvas-grid {
+  width: 100%;
+}
 .css-grid {
   display: flex;
   border-top: 2px dashed #959595;
