--- a/assets/scss/bulma_override/bulma_font.scss
+++ b/assets/scss/bulma_override/bulma_font.scss
@@ -1,3 +1,3 @@
 // Import a Google Font
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&family=IBM+Plex+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=IBM+Plex+Serif&display=swap');
 $family-sans-serif: "IBM Plex Sans", sans-serif;
