--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,7 @@
 /* Import the rest of Bulma */
 @import '~bulma';
 
+@import 'breakpoints';
 @import 'typography';
 @import 'transitions';
 @import 'grid';
